--- a/python/normalizacion_datos_categoricos.ipynb
+++ b/python/normalizacion_datos_categoricos.ipynb
@@ -16,42 +16,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          category         city        country customer_ID  order_priority  \\\n",
-      "0        Furniture  Los Angeles  UNITED STATES   LS-172304               3   \n",
-      "1  Office Supplies  Los Angeles  UNITED STATES   MV-174584               2   \n",
-      "2       Technology  Los Angeles  UNITED STATES   CS-123104               1   \n",
-      "3        Furniture  Los Angeles  UNITED STATES   AP-109154               2   \n",
+      "          category  category_code         city        country customer_ID  \\\n",
+      "0        Furniture              1  Los angeles  United states   LS-172304   \n",
+      "1  Office supplies              2  Los angeles  United states   MV-174584   \n",
+      "2       Technology              3  Los angeles  United states   CS-123104   \n",
+      "3        Furniture              1  Los angeles  United states   AP-109154   \n",
       "\n",
-      "  market  order_date region   ship_date  category_code  order_year  \\\n",
-      "0     US  2011-01-07   West  2011-01-09              1        2011   \n",
-      "1     US  2011-01-08   West  2011-01-10              2        2011   \n",
-      "2     US  2011-01-09   West  2011-01-11              3        2011   \n",
-      "3     US  2011-01-10   West  2011-01-12              1        2011   \n",
+      "  customer_name  discount market  unknown  order_date  ...  ship_year  \\\n",
+      "0      John Doe      0.10     US        1  2011-01-07  ...       2011   \n",
+      "1    Jane Smith      0.15     US        1  2011-01-08  ...       2011   \n",
+      "2  Alan Smithee      0.20     US        1  2011-01-09  ...       2011   \n",
+      "3    Emma Stone      0.05     US        1  2011-01-10  ...       2011   \n",
       "\n",
-      "   order_month  order_day  ship_year  ship_month  ship_day  \n",
-      "0            1          7       2011           1         9  \n",
-      "1            1          8       2011           1        10  \n",
-      "2            1          9       2011           1        11  \n",
-      "3            1         10       2011           1        12  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ljgov\\AppData\\Local\\Temp\\ipykernel_25420\\1767030797.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['order_priority'] = df['order_priority'].replace({\n"
+      "   ship_month  ship_day     ship_mode shipping_cost       state  \\\n",
+      "0           1         9      Standard            15  California   \n",
+      "1           1        10  Second Class             7  California   \n",
+      "2           1        11   First Class            20  California   \n",
+      "3           1        12      Standard            10  California   \n",
+      "\n",
+      "      sub_category  year  market2 weeknum  \n",
+      "0  Office Supplies  2011     West       1  \n",
+      "1  Office Supplies  2011     West       2  \n",
+      "2       Technology  2011     West       3  \n",
+      "3        Furniture  2011     West       4  \n",
+      "\n",
+      "[4 rows x 33 columns]\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Habilitar la opción para evitar advertencias en el futuro\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
     "\n",
     "# Ejemplo de datos iniciales\n",
     "data = {\n",
@@ -63,46 +67,62 @@
     "    'market': ['US', 'US', 'US', 'US'],\n",
     "    'order_date': ['7/01/2011 0:00:00', '8/01/2011 0:00:00', '9/01/2011 0:00:00', '10/01/2011 0:00:00'],\n",
     "    'region': ['West', 'West', 'west', 'West'],\n",
-    "    'ship_date': ['9/01/2011 0:00:00', '10/01/2011 0:00:00', '11/01/2011 0:00:00', '12/01/2011 0:00:00']\n",
+    "    'ship_date': ['9/01/2011 0:00:00', '10/01/2011 0:00:00', '11/01/2011 0:00:00', '12/01/2011 0:00:00'],\n",
+    "    'product_name': ['Desk', 'Pen', 'Laptop', 'Chair'],\n",
+    "    'profit': [50, 5, 150, 45],\n",
+    "    'quantity': [2, 10, 1, 3],\n",
+    "    'sales': [200, 20, 1000, 150],\n",
+    "    'ship_mode': ['Standard', 'Second Class', 'First Class', 'Standard'],\n",
+    "    'state': ['California', 'California', 'California', 'California'],\n",
+    "    'sub_category': ['Office Supplies', 'Office Supplies', 'Technology', 'Furniture'],\n",
+    "    'year': [2011, 2011, 2011, 2011],\n",
+    "    'market2': ['West', 'West', 'West', 'West'],\n",
+    "    'weeknum': [1, 2, 3, 4],\n",
+    "    'order_id': ['OD001', 'OD002', 'OD003', 'OD004'],\n",
+    "    'row_id': [1, 2, 3, 4],\n",
+    "    'customer_name': ['John Doe', 'Jane Smith', 'Alan Smithee', 'Emma Stone'],\n",
+    "    'discount': [0.1, 0.15, 0.2, 0.05],\n",
+    "    'shipping_cost': [15, 7, 20, 10],\n",
+    "    'unknown': ['NA', 'NA', 'NA', 'NA']\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# 1. Estandarización de textos\n",
-    "df['category'] = df['category'].str.title()  # Establecer formato título (ej. 'Furniture')\n",
-    "df['city'] = df['city'].str.title()  # Convertir el nombre de la ciudad en formato título\n",
-    "df['country'] = df['country'].str.upper()  # Convertir el nombre del país a mayúsculas\n",
-    "df['order_priority'] = df['order_priority'].str.capitalize()  # Convertir a formato título\n",
-    "df['region'] = df['region'].str.title()  # Convertir la región en formato título\n",
+    "# Cambiar el valor de la columna 'unknown' de 'NA' a 1 y convertir a entero\n",
+    "df['unknown'] = df['unknown'].replace('NA', 1).astype(int)\n",
     "\n",
-    "# 2. Corrección de errores tipográficos y normalización\n",
-    "# Normalizar la columna 'country'\n",
-    "df['country'] = df['country'].replace(['US', 'U.S.'], 'UNITED STATES')\n",
+    "# 1. Guardar las columnas originales\n",
+    "df['order_priority_original'] = df['order_priority']\n",
     "\n",
-    "# Normalizar la columna 'order_priority'\n",
+    "# 2. Estandarización de textos: Solo la primera letra mayúscula\n",
+    "df['category'] = df['category'].str.capitalize()\n",
+    "df['city'] = df['city'].str.capitalize()\n",
+    "df['country'] = df['country'].str.capitalize()\n",
+    "df['order_priority'] = df['order_priority'].str.capitalize()\n",
+    "df['region'] = df['region'].str.capitalize()\n",
+    "\n",
+    "# 3. Corrección de errores tipográficos y normalización\n",
+    "df['country'] = df['country'].replace(['Us', 'U.s.'], 'United states')\n",
     "df['order_priority'] = df['order_priority'].replace({\n",
     "    'Critical': 4,\n",
-    "    'High': 3, \n",
-    "    'Medium': 2, \n",
+    "    'High': 3,\n",
+    "    'Medium': 2,\n",
     "    'Low': 1\n",
-    "})\n",
+    "}).astype(int)\n",
     "\n",
-    "# 3. Codificación de variables categóricas\n",
-    "# Normalizar 'category'\n",
+    "# 4. Codificación de variables categóricas\n",
     "category_mapping = {\n",
     "    'Furniture': 1,\n",
-    "    'Office Supplies': 2,\n",
+    "    'Office supplies': 2,\n",
     "    'Technology': 3\n",
     "}\n",
+    "\n",
     "df['category_code'] = df['category'].map(category_mapping)\n",
+    "df['category_code'] = df['category_code'].fillna(-1)\n",
     "\n",
-    "# 4. Conversión de las columnas de fecha al formato de fecha estándar\n",
-    "df['order_date'] = pd.to_datetime(df['order_date'], format='%d/%m/%Y %H:%M:%S')\n",
-    "df['ship_date'] = pd.to_datetime(df['ship_date'], format='%d/%m/%Y %H:%M:%S')\n",
-    "\n",
-    "# 5. Si la hora es irrelevante, puedes eliminarla extrayendo solo la parte de la fecha\n",
-    "df['order_date'] = df['order_date'].dt.date\n",
-    "df['ship_date'] = df['ship_date'].dt.date\n",
+    "# 5. Conversión de las columnas de fecha al formato de fecha estándar\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'], format='%d/%m/%Y %H:%M:%S').dt.date\n",
+    "df['ship_date'] = pd.to_datetime(df['ship_date'], format='%d/%m/%Y %H:%M:%S').dt.date\n",
     "\n",
     "# 6. Extraer componentes de la fecha\n",
     "df['order_year'] = pd.DatetimeIndex(df['order_date']).year\n",
@@ -113,12 +133,16 @@
     "df['ship_month'] = pd.DatetimeIndex(df['ship_date']).month\n",
     "df['ship_day'] = pd.DatetimeIndex(df['ship_date']).day\n",
     "\n",
+    "# 7. Reordenar las columnas\n",
+    "df = df[['category', 'category_code', 'city', 'country', 'customer_ID', 'customer_name', 'discount',\n",
+    "         'market', 'unknown', 'order_date', 'order_year', 'order_month', 'order_day', 'order_id',\n",
+    "         'order_priority_original', 'order_priority', 'product_name', 'profit',\n",
+    "         'quantity', 'region', 'row_id', 'sales', 'ship_date', 'ship_year', \n",
+    "         'ship_month', 'ship_day', 'ship_mode', 'shipping_cost', 'state', 'sub_category',\n",
+    "         'year', 'market2', 'weeknum']]\n",
     "\n",
-    "# 7. Verificación de resultados\n",
-    "print(df)\n",
-    "\n",
-    "# Si necesitas guardar el archivo nuevamente como CSV\n",
-    "# df.to_csv('ruta_al_archivo_normalizado.csv', index=False)\n"
+    "# 8. Verificación de resultados\n",
+    "print(df)\n"
    ]
   }
  ],
