--- a/python/normalizacion_datos_categoricos.ipynb
+++ b/python/normalizacion_datos_categoricos.ipynb
@@ -147,6 +147,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se encontraron valores no numéricos en las columnas numéricas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seleccionar columnas numéricas\n",
+    "num_cols = df.select_dtypes(include=['number']).columns\n",
+    "\n",
+    "# Variable para verificar si se encontraron valores no numéricos\n",
+    "valores_no_numericos_encontrados = False\n",
+    "\n",
+    "# Encontrar valores no numéricos en columnas numéricas\n",
+    "for col in num_cols:\n",
+    "    # Convertir la columna a tipo numérico forzando errores a NaN\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+    "    # Verificar si hay valores NaN (que eran textos u otros valores inválidos)\n",
+    "    if df[col].isnull().any():\n",
+    "        valores_no_numericos_encontrados = True\n",
+    "        print(f'Columna {col} tiene valores no numéricos.')\n",
+    "        print(df[df[col].isnull()][col])\n",
+    "\n",
+    "# Mostrar mensaje si no se encontraron valores no numéricos\n",
+    "if not valores_no_numericos_encontrados:\n",
+    "    print('No se encontraron valores no numéricos en las columnas numéricas.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
