--- a/python/normalizacion_datos_categoricos.ipynb
+++ b/python/normalizacion_datos_categoricos.ipynb
@@ -678,6 +678,348 @@
     "missing_values = df.isnull().sum()\n",
     "print(missing_values[missing_values > 0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>int</th>\n",
+       "      <th>float</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>object</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>category_code</td>\n",
+       "      <td>discount</td>\n",
+       "      <td>--</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>unknown</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>city</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>order_year</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>country</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>order_month</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>customer_ID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>order_day</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>customer_name</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>order_priority</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>market</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>profit</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>order_date</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>quantity</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>order_id</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>row_id</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>order_priority_original</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>product_name</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ship_year</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ship_month</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>ship_date</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ship_day</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>ship_mode</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>shipping_cost</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>state</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>year</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>sub_category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>weeknum</td>\n",
+       "      <td>--</td>\n",
+       "      <td>--</td>\n",
+       "      <td>market2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               int     float datetime                   object\n",
+       "0    category_code  discount       --                 category\n",
+       "1          unknown        --       --                     city\n",
+       "2       order_year        --       --                  country\n",
+       "3      order_month        --       --              customer_ID\n",
+       "4        order_day        --       --            customer_name\n",
+       "5   order_priority        --       --                   market\n",
+       "6           profit        --       --               order_date\n",
+       "7         quantity        --       --                 order_id\n",
+       "8           row_id        --       --  order_priority_original\n",
+       "9            sales        --       --             product_name\n",
+       "10       ship_year        --       --                   region\n",
+       "11      ship_month        --       --                ship_date\n",
+       "12        ship_day        --       --                ship_mode\n",
+       "13   shipping_cost        --       --                    state\n",
+       "14            year        --       --             sub_category\n",
+       "15         weeknum        --       --                  market2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from IPython.display import display\n",
+    "def get_data_types(df):\n",
+    "    data_types = {col: df[col].dtypes.name for col in df.columns}\n",
+    "    return data_types\n",
+    "def display_data_types_summary(df):\n",
+    "    data_types = get_data_types(df)\n",
+    "    # Define the categories of types\n",
+    "    types = {\n",
+    "        'int': ['int8', 'int16', 'int32', 'int64', 'uint8', 'uint16', 'uint32', 'uint64', 'Int64'],\n",
+    "        'float': ['float16', 'float32', 'float64'],\n",
+    "        'datetime': ['datetime64[ns]', 'datetime64[s]', 'datetime64[ms]', 'datetime64[us]', 'datetime64[ns, UTC]', 'datetime64[us, UTC]'],\n",
+    "        'object': ['object']\n",
+    "    }\n",
+    "    # Initialize a dictionary to hold the columns by data type\n",
+    "    categorized_data_types = {cat: [] for cat in types}\n",
+    "    # Categorize each column by its data type\n",
+    "    for col, dtype in data_types.items():\n",
+    "        category = 'object'\n",
+    "        for cat, dtypes_list in types.items():\n",
+    "            if dtype in dtypes_list:\n",
+    "                category = cat\n",
+    "                break\n",
+    "        categorized_data_types[category].append(col)\n",
+    "    # Convert the dictionary to a DataFrame for display\n",
+    "    df_summary = pd.DataFrame(dict([(k, pd.Series(v)) for k, v in categorized_data_types.items()]))\n",
+    "    # Replace NaN values with --\n",
+    "    df_summary = df_summary.fillna('--')\n",
+    "    # Display the DataFrame\n",
+    "    display(df_summary)\n",
+    "# Ejemplo de uso\n",
+    "display_data_types_summary(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Headquarters</th>\n",
+       "      <th>Served countries (besides the headquarters)</th>\n",
+       "      <th>Number of locations</th>\n",
+       "      <th>Number of employees</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7-Eleven</td>\n",
+       "      <td>Japan United States</td>\n",
+       "      <td>Australia, Canada, China, Cambodia, Denmark, H...</td>\n",
+       "      <td>84500</td>\n",
+       "      <td>170000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aeon</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Australia, Cambodia, China, Hong Kong, India, ...</td>\n",
+       "      <td>20008</td>\n",
+       "      <td>560,000+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ahold Delhaize</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>Belgium (as Albert Heijn and Delhaize), Czech ...</td>\n",
+       "      <td>7659</td>\n",
+       "      <td>375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aldi Nord</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Belgium, Denmark, France, Luxembourg, Netherla...</td>\n",
+       "      <td>5241</td>\n",
+       "      <td>72811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aldi Süd</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Australia, Austria (as Hofer), China, Hungary,...</td>\n",
+       "      <td>7178</td>\n",
+       "      <td>201361</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Company         Headquarters  \\\n",
+       "0        7-Eleven  Japan United States   \n",
+       "1            Aeon                Japan   \n",
+       "2  Ahold Delhaize          Netherlands   \n",
+       "3       Aldi Nord              Germany   \n",
+       "4        Aldi Süd              Germany   \n",
+       "\n",
+       "         Served countries (besides the headquarters) Number of locations  \\\n",
+       "0  Australia, Canada, China, Cambodia, Denmark, H...               84500   \n",
+       "1  Australia, Cambodia, China, Hong Kong, India, ...               20008   \n",
+       "2  Belgium (as Albert Heijn and Delhaize), Czech ...                7659   \n",
+       "3  Belgium, Denmark, France, Luxembourg, Netherla...                5241   \n",
+       "4  Australia, Austria (as Hofer), China, Hungary,...                7178   \n",
+       "\n",
+       "  Number of employees  \n",
+       "0              170000  \n",
+       "1            560,000+  \n",
+       "2              375000  \n",
+       "3               72811  \n",
+       "4              201361  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "from io import StringIO\n",
+    "\n",
+    "# Realiza la solicitud a la página web\n",
+    "url = \"https://en.wikipedia.org/wiki/List_of_supermarket_chains\"\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "# Encuentra la primera tabla con la clase 'wikitable'\n",
+    "table = soup.find_all('table', {'class': 'wikitable'})[0]\n",
+    "\n",
+    "# Convierte la tabla a un string y usa StringIO para crear un objeto similar a un archivo\n",
+    "table_str = str(table)\n",
+    "table_io = StringIO(table_str)\n",
+    "\n",
+    "# Usa pandas para leer la tabla HTML desde el objeto StringIO\n",
+    "df_list = pd.read_html(table_io)[0]\n",
+    "\n",
+    "# Elimina la columna 'Unnamed: 6'\n",
+    "df_list = df_list.drop(columns=['Unnamed: 6'], errors='ignore')\n",
+    "df_list = df_list.drop(columns=['Map'], errors='ignore')\n",
+    "\n",
+    "# Muestra las primeras filas del DataFrame para inspección\n",
+    "display(df_list.head())\n"
+   ]
   }
  ],
  "metadata": {
